# src/AspNetCoreSample.WebApi/Controllers/SimpleController.cs
@@ -1,4 +1,5 @@
 // using AspNetCoreSample.Util;
+using AspNetCoreSample.WebApi.Logging;
 using AspNetCoreSample.WebApi.Resources;
 
 using Microsoft.AspNetCore.Mvc;
@@ -37,6 +38,13 @@ public class SimpleController : ControllerBase
     public SimpleOutput SavePost(SimpleInput input)
     {
         return new SimpleOutput { Output = input.Input };
+    }
+
+    [Logging]
+    [HttpPost("Exception")]
+    public SimpleOutput Exception(SimpleInput input)
+    {
+        throw new ArgumentException("Exception test");
     }
 
     [HttpGet("Resource")]
